syntax = "proto3";
package paxos;
option java_multiple_files = true;
option java_package = "today.ihelio.paxoscomponents";
import "client_messages.proto";

message Proposal {
  int32 proposalNumber = 1;
  int32 hostID = 2;
  int32 index = 3;
  string value = 4;
}

message PrepareRequest {
  Proposal proposal = 1;
}

message PrepareResponse {
  Proposal proposal = 1;
  int32 hostId = 2;
}

message AcceptRequest {
  int32 proposalNumber = 1;
  int32 index = 2;
  string value = 3;
  int32 firstUnchosenIndex = 4;
}

message SuccessRequest {
  int32 index = 1;
  string value = 2;
}

message AcceptorResponse {
  int32 firstUnchosenIndex = 1;
  bool noUnacceptedValue = 2;
  int32 highestProposal = 3;
  bool responseStatus = 4;
  int32 hostId = 5;
}

message HeartbeatRequest {
  int32 hostId = 1;
  string address = 2;
  int32 port = 3;
}

message HeartbeatResponse {
  bool received = 1;
}

service PaxosServerService {
  rpc MakeProposalMsg(PrepareRequest) returns (PrepareResponse) {};
  rpc MakeAcceptMsg(AcceptRequest) returns (AcceptorResponse) {};
  rpc MakeSuccessMsg(SuccessRequest) returns (AcceptorResponse) {};
  rpc SendHeartBeat(HeartbeatRequest) returns (HeartbeatResponse) {};
  rpc CreateNewData(DataInsertionRequest) returns (DataInsertionResponse);
}
